--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div>
 <div class="link">
 	<br><br><br>
-	<a href="" alt="site address">Click here to visit the site.</a>
+	<a href="https://e9616y0gfuntlke3sjua0gdt61.hop.clickbank.net" alt="site address">Click here to visit the site.</a>
 	<br><br><br>
 </div>
 </body>
